<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_decrypt"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="396dp"
        android:text="@string/decrypt"
        android:textColor="#1F514D"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_encrypt"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="272dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/encrypt"
        android:textColor="#1F514D"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_decrypt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/input_hide"
        android:inputType="textPersonName"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <TextView
        android:id="@+id/output_text"
        android:layout_width="352dp"
        android:layout_height="104dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_for_output"
        android:layout_width="225dp"
        android:layout_height="38dp"
        android:text="@string/output_text"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/button_choose_1"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="259dp"
        android:layout_height="63dp"
        android:background="#A11A1A"
        android:text="@string/menu_text"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/button_read_file"
        android:layout_width="289dp"
        android:layout_height="52dp"
        android:text="@string/button_read_file"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/output_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />

    <Button
        android:id="@+id/button_write_file"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:text="@string/button_write_file"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/button_hide"
        android:layout_width="267dp"
        android:layout_height="49dp"
        android:text="@string/button_go_photo"
        app:layout_constraintBottom_toBottomOf="@+id/button_write_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />


</androidx.constraintlayout.widget.ConstraintLayout>